--- a/style.css
+++ b/style.css
@@ -485,7 +485,8 @@ font-size:1.5em;
 
 }
 #home img{
-width:20vw;
+width:24vw;
+height:24vw;  
 }
     #projects .header {
         font-size: 2.5em;
